--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -75,3 +75,8 @@
         background-color: goldenrod;
     }
 }
+
+/* ------------------------------------- */
+/* MENU TOOGLE */
+/* ------------------------------------- */
+
