--- a/src/sass/components/_cards.scss
+++ b/src/sass/components/_cards.scss
@@ -5,6 +5,21 @@
     background-color: orange;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+    overflow: hidden;
 
-    
+    &__article {
+        display: flex;
+    }
+
+    &__image {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+
+    &__image-container {
+        height: 200px;
+        background-color: blue;
+        overflow: hidden;
+    }
 }
