--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -24,6 +24,12 @@
         flex-direction: column;
         justify-content: center;
         list-style-type: none;
+
+        @media screen and (min-width: 768px) {
+            & {
+                flex-direction: row;
+            }
+        }
     }
 
     &__nav-item {
@@ -36,6 +42,12 @@
         background-color: purple;
         padding: 1rem 2rem;
         color: white;
+    }
+
+    @media screen and (min-width: 768px) {
+        & {
+            display: block;
+        }
     }
 }
 
@@ -118,6 +130,12 @@
 
     &__bottom-bread {
         bottom: .8rem;
+    }
+
+    @media screen and (min-width: 768px) {
+        & {
+            display: none;
+        }
     }
     
 }
