--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -5,10 +5,24 @@
 .main-header {
     display: flex;
     flex-direction: column-reverse;
+
+    @media screen and (min-width: 768px) {
+        & {
+            flex-direction: column;
+        }
+    }
 }
 
 #menu {
     display: none; /* para hacer funcionar el menu hamburguesa */
+
+    &:checked + .nav-bar {
+        display: block;
+    }
+
+    &:checked ~ .search-bar .menu-toogle .menu-toogle__label {
+        background-color: yellow;
+    }
 }
 
 /* ------------------------------------- */
