--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column-reverse;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 992px) {
         & {
             flex-direction: column;
         }
@@ -21,7 +21,7 @@
     }
 
     &:checked ~ .search-bar .menu-toogle .menu-toogle__label {
-        background-color: yellow;
+        background-color: white;
     }
 }
 
@@ -30,7 +30,7 @@
 /* ------------------------------------- */
 
 .nav-bar {
-    background-color: #1a1a1a;
+    background-color: #333;
     display: none;
     
     &__nav-list {
@@ -39,7 +39,7 @@
         justify-content: center;
         list-style-type: none;
 
-        @media screen and (min-width: 768px) {
+        @media screen and (min-width: 992px) {
             & {
                 flex-direction: row;
             }
@@ -52,12 +52,12 @@
 
     &__nav-link {
         display: block;
-        background-color: #1a1a1a;
+        background-color: #333;
         padding: 1rem 2rem;
         color: white;
     }
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 992px) {
         & {
             display: block;
         }
@@ -72,6 +72,9 @@
     display: flex;
     background-color: #ffed00;
     justify-content: space-around;
+    align-items: normal;
+    width: 100%;
+    margin: 0 auto;
 
     &__logo-container {
         width: 18.75rem;
@@ -84,6 +87,7 @@
         display: flex;
         flex-basis: 100%;
         justify-content: center;
+        margin: auto;
     }
 
     &__form-label {
@@ -98,7 +102,7 @@
     }
 
     &__form-submit {
-        background-color: #1a1a1a;
+        background-color: #333;
         color: white;
         border-radius: 20px;
         padding: 10px;
@@ -108,7 +112,14 @@
     &__carrito-container {
         flex: 0 0 3rem;
         background-color: #ffed00;
+        display: flex;
+        width: 100%;
+        cursor: pointer;
+        font-size: 2rem;
+        margin-right: 1rem;
+        align-items: center;
     }
+    
 }
 
 /* ------------------------------------- */
@@ -117,15 +128,16 @@
 
 .menu-toogle {
     display: block;
-    background-color: red;
+    background-color: #333;
     flex: 0 0 3rem;
     position: relative;
     cursor: pointer;
 
     &__label {
         display: block;
-        background-color: black;
+        background-color: #ffed00;
         height: 100%;
+        cursor: pointer;
     }
 
     &__top-bread,
@@ -136,7 +148,7 @@
         height: .2rem;
         position: absolute;
         left: .5rem;
-        right: .5rem;
+        right: .5rem;        
     }
 
     &__top-bread {
@@ -152,7 +164,7 @@
         bottom: .8rem;
     }
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 992px) {
         & {
             display: none;
         }
