--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,3 +3,7 @@
 @use './layout/header';
 @use './pages/inicio';
 @use './components/cards';
+@use './layout/footer';
+@use './pages/contacto';
+@use './pages/nosotros';
+@use './components/form';
