--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -99,6 +99,7 @@
         padding: 10px 100px;
         border-radius: 20px;
         margin-right: 5px;
+        text-align: center;
     }
 
     &__form-submit {
